--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.2.0",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
