--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
