--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,78 +5,125 @@ on:
     branches:
       - dev
       - main
+    paths:
+      - "api/**"
+      - "client/**"
 
 jobs:
-  deploy:
+  deploy-api:
+    if: contains(github.event.head_commit.message, '[api]') || github.event.paths_changed && github.event.paths_changed.* == 'api/**'
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set Deployment Variables
+      - name: Set API Environment Variables
         run: |
           if [[ "${GITHUB_REF_NAME}" == "main" ]]; then
             echo "ENV=prod" >> $GITHUB_ENV
             echo "APP_DIR=/srv/apps/ukt-prod" >> $GITHUB_ENV
-            echo "BRANCH=main" >> $GITHUB_ENV
             echo "API_PORT=8080" >> $GITHUB_ENV
-            echo "CLIENT_PORT=3000" >> $GITHUB_ENV
             echo "API_CONTAINER=ukt_api_prod" >> $GITHUB_ENV
-            echo "CLIENT_CONTAINER=ukt_client_prod" >> $GITHUB_ENV
             echo "API_IMAGE=ukt-api:prod" >> $GITHUB_ENV
-            echo "CLIENT_IMAGE=ukt-client:prod" >> $GITHUB_ENV
           else
             echo "ENV=dev" >> $GITHUB_ENV
             echo "APP_DIR=/srv/apps/ukt-dev" >> $GITHUB_ENV
-            echo "BRANCH=dev" >> $GITHUB_ENV
             echo "API_PORT=8081" >> $GITHUB_ENV
-            echo "CLIENT_PORT=3001" >> $GITHUB_ENV
             echo "API_CONTAINER=ukt_api_dev" >> $GITHUB_ENV
-            echo "CLIENT_CONTAINER=ukt_client_dev" >> $GITHUB_ENV
             echo "API_IMAGE=ukt-api:dev" >> $GITHUB_ENV
-            echo "CLIENT_IMAGE=ukt-client:dev" >> $GITHUB_ENV
           fi
 
-      - name: Deploy to Server
+      - name: Deploy API via SSH
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          envs: ENV,APP_DIR,BRANCH,API_PORT,CLIENT_PORT,API_CONTAINER,CLIENT_CONTAINER,API_IMAGE,CLIENT_IMAGE
+          envs: ENV,APP_DIR,API_PORT,API_CONTAINER,API_IMAGE
           script: |
             set -e
-
-            echo "Deploy environment : $ENV"
-            echo "Target directory  : $APP_DIR"
-            echo "Git branch        : $BRANCH"
-
+            echo "Deploying API to $ENV environment..."
             cd $APP_DIR
             git fetch origin
-            git checkout $BRANCH
-            git pull origin $BRANCH
+            git checkout $GITHUB_REF_NAME
+            git pull origin $GITHUB_REF_NAME
 
-            echo "Building API image"
+            echo "Building API Docker image..."
             docker build -t $API_IMAGE ./api
+
+            echo "Stopping old API container if exists..."
             docker rm -f $API_CONTAINER || true
+
+            echo "Running new API container..."
             docker run -d \
               --name $API_CONTAINER \
               --restart unless-stopped \
-              -p 127.0.0.1:${API_PORT}:3000 \
+              -p ${API_PORT}:3000 \
               --env-file $APP_DIR/api/.env \
               $API_IMAGE
 
-            echo "Building Client image"
-            docker build -t $CLIENT_IMAGE ./client
+            docker image prune -f
+            echo "API deploy completed"
+
+  deploy-client:
+    if: contains(github.event.head_commit.message, '[client]') || github.event.paths_changed && github.event.paths_changed.* == 'client/**'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Cache Node Modules & Next.js Build
+        uses: actions/cache@v3
+        with:
+          path: |
+            client/node_modules
+            client/.next/cache
+          key: ${{ runner.os }}-next-${{ hashFiles('client/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-next-
+
+      - name: Set Client Environment Variables
+        run: |
+          if [[ "${GITHUB_REF_NAME}" == "main" ]]; then
+            echo "ENV=prod" >> $GITHUB_ENV
+            echo "APP_DIR=/srv/apps/ukt-prod" >> $GITHUB_ENV
+            echo "CLIENT_PORT=3000" >> $GITHUB_ENV
+            echo "CLIENT_CONTAINER=ukt_client_prod" >> $GITHUB_ENV
+            echo "CLIENT_IMAGE=ukt-client:prod" >> $GITHUB_ENV
+          else
+            echo "ENV=dev" >> $GITHUB_ENV
+            echo "APP_DIR=/srv/apps/ukt-dev" >> $GITHUB_ENV
+            echo "CLIENT_PORT=3001" >> $GITHUB_ENV
+            echo "CLIENT_CONTAINER=ukt_client_dev" >> $GITHUB_ENV
+            echo "CLIENT_IMAGE=ukt-client:dev" >> $GITHUB_ENV
+          fi
+
+      - name: Build Next.js Client
+        run: |
+          cd client
+          npm ci
+          npm run build
+
+      - name: Build Client Docker Image
+        run: |
+          docker build -t $CLIENT_IMAGE ./client
+
+      - name: Deploy Client via SSH
+        uses: appleboy/ssh-action@v1.1.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          envs: ENV,APP_DIR,CLIENT_PORT,CLIENT_CONTAINER,CLIENT_IMAGE
+          script: |
+            set -e
+            echo "Deploying Client to $ENV environment..."
+            cd $APP_DIR
             docker rm -f $CLIENT_CONTAINER || true
             docker run -d \
               --name $CLIENT_CONTAINER \
               --restart unless-stopped \
-              -p 127.0.0.1:${CLIENT_PORT}:3000 \
-              --env-file $APP_DIR/client/.env \
+              -p ${CLIENT_PORT}:3000 \
               $CLIENT_IMAGE
-
             docker image prune -f
-
-            echo "Deploy completed"
+            echo "Client deploy completed"
