--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,35 @@ on:
       - "client/**"
 
 jobs:
+  detect-changes:
+    runs-on: ubuntu-latest
+    outputs:
+      api_changed: ${{ steps.set-vars.outputs.api_changed }}
+      client_changed: ${{ steps.set-vars.outputs.client_changed }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Detect changed folders
+        id: set-vars
+        run: |
+          API_CHANGED=false
+          CLIENT_CHANGED=false
+          echo "Checking changes..."
+          if git diff --name-only HEAD~1 | grep -q '^api/'; then
+            API_CHANGED=true
+          fi
+          if git diff --name-only HEAD~1 | grep -q '^client/'; then
+            CLIENT_CHANGED=true
+          fi
+          echo "API_CHANGED=$API_CHANGED"
+          echo "CLIENT_CHANGED=$CLIENT_CHANGED"
+          echo "::set-output name=api_changed::$API_CHANGED"
+          echo "::set-output name=client_changed::$CLIENT_CHANGED"
+
   deploy-api:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.api_changed == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -65,6 +93,8 @@ jobs:
             echo "API deploy completed"
 
   deploy-client:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.client_changed == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -79,6 +109,15 @@ jobs:
           key: ${{ runner.os }}-next-${{ hashFiles('client/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-next-
+
+      - name: Create .env for Next.js
+        run: |
+          cat <<EOF > client/.env
+          NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }}
+          NEXT_PUBLIC_IMAGE_URL=${{ secrets.NEXT_PUBLIC_IMAGE_URL }}
+          NEXT_PUBLIC_SOCKET_URL=${{ secrets.NEXT_PUBLIC_SOCKET_URL }}
+          NEXT_PUBLIC_SECRET=${{ secrets.NEXT_PUBLIC_SECRET }}
+          EOF
 
       - name: Set Client Environment Variables
         run: |
