--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,7 +16,8 @@ COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package*.json ./
 
-RUN npm ci --only=production
+RUN npm ci --omit=dev --cache /tmp/npm-cache
 
 EXPOSE 3000
+
 CMD ["npm", "start"]
