--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,9 @@
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
